feat: Challenge 도메인 API 문서화 및 JavaDoc 추가
- ChallengeController에 Swagger 어노테이션 추가
  - @Tag로 API 그룹 분류 및 설명 추가
  - 각 메서드에 @Operation, @ApiResponses 어노테이션 적용
  - @Parameter로 파라미터 설명 추가
- CreateChallengeReqDTO에 @Schema 어노테이션 추가
  - 각 필드별 상세 설명 및 예시 값 제공
- ChallengeService 인터페이스에 JavaDoc 추가
  - 모든 public 메서드에 상세한 설명과 파라미터 정보 추가